# srm-ifce

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  RELEASE-NOTES  VERSION  aclocal.m4  c.sh  configure  configure.ac  readme.html
ci/: common-rpm-build.sh  fedora-packages.sh
cmake/modules/: CMakeGeneratePkgConfig.cmake  DefineInstallationPaths.cmake  FindCGSI_GSOAP.cmake  FindgSOAP.cmake
m4-EPEL/: boost.m4  ccheck.m4  cgsi-gsoap.m4  docbook_html.m4  docbook_man.m4  find_activemq.m4  find_apr.m4  glite.m4  glite_ce.m4  glite_gsoap_headernames.m4  glite_jobid.m4  glite_lb_nf.m4  glite_security.m4  glite_wsdl_file.m4  globus-fix.m4  globus.m4  gridsite.m4  gsoap-fix.m4  gsoap.m4  ltdl-fix.m4  mysql-devel.m4  python-c.m4  symbol-version.m4
modules/: FindgSOAP.cmake
packaging/: Makefile  gfal2-repo-manager.py
packaging/debian/: changelog  control  copyright  libgfal-srm-ifce1.docs  libgfal-srm-ifce1.install  rules  srm-ifce-dev.docs  srm-ifce-dev.install
packaging/rpm/: srm-ifce.spec
packaging/rpm/specs/: srm-ifce.spec
project/: publish-to-web
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  configure  edg-local-replica-catalog.wsdl  edg-replica-metadata-catalog.wsdl  edg-se-webservice.wsdl  gfal_srm_ifce.h  gfal_srm_ifce_internal.h  gfal_srm_ifce_memory_functions.c  gfal_srm_ifce_systemtest.c  gfal_srm_ifce_types.h  gfal_srm_ifce_unittest.c  gfal_srm_ifce_unittest.h  gfal_srm_ifce_unittest_common.c  gfal_srm_ifce_unittest_srmls.c  gfal_srm_ifce_version.c  srm.v2.2.wsdl  srmSoapBinding.c  srm_data_transfer_functions.c  srm_dependencies.c  srm_dependencies.h  srm_directory_functions.c  srm_ifce.h  srm_ifce_internal.h  srm_soap.h  srm_space_management_functions.c  srm_struct_util.c  srm_test.c  srm_types.h  srm_unittest.c  srm_util.c  srm_util.h  srm_version_wrapper.c  srmv2C.c  srmv2Client.c  srmv2H.h  srmv2Stub.h  srmv2_async_wrapper.c  (+14 more)
src/autogen/: config.h  config.h.in  stamp-h1
test/: execute_tests.sh
test/unit/: execute_tests.sh
trunk/: DESCRIPTION  Makefile.am  README  RELEASE-NOTES
trunk/cmake/modules/: FindDPM.cmake
trunk/packaging/rpm/specs/: srm-ifce.spec
trunk/project/: e-c_org.glite.data.gfal-py25.ini  e-c_org.glite.data.gfal.ini  e-m_org.glite.data.gfal-py25.ini  e-m_org.glite.data.gfal.ini
trunk/src/: Makefile.am  gfal_srm_ifce.h  gfal_srm_ifce_internal.h  gfal_srm_ifce_systemtest.c  gfal_srm_ifce_types.h  gfal_srm_ifce_unittest.c  gfal_srm_ifce_version.c  srm.v1.1.wsdl  srmSoapBinding.c  srm_ifce_internal.h  srm_util.c  srm_util.h  srm_version_wrapper.c  srmv2_async_wrapper.c  srmv2_data_transfer_functions.c  srmv2_directory_functions.c  srmv2_directory_functions.h  srmv2_discovery_functions.c  srmv2_discovery_functions.h  srmv2_permission_functions.c  srmv2_space_management_functions.h  srmv2_sync_wrapper.c  srmv2_sync_wrapper.h  time_utils.h
trunk/test/unit/: execute_tests.sh
