# Copyright (c) Members of the EGEE Collaboration. 2004-2008.
# See http://www.eu-egee.org/partners/ for details on the copyright
# holders.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# org.glite.data.gfal src/Makefile.am
#
# Authors: Paolo Tedesco <paolo.tedesco@cern.ch>
# Version info: $Id: Makefile.am,v 1.23 2009/10/14 09:47:14 szamsu Exp $
# Release: $Name:  $

SOAPCPP2=$(GSOAP_LOCATION)/bin/soapcpp2
#SOAPCPP2FLAGS=-c -d/home/tmanev/tmp 
SOAPCPP2FLAGS=-c  
#	-c = generate c code

#WSDL2H=$(GSOAP_LOCATION)/bin/wsdl2h
WSDL2H=$(GSOAP_WSDL2H_LOCATION)/bin/wsdl2h
if USE_GSOAP_2_7_10
WSDL2HFLAGS=-c -e -y -I$(GSOAP_LOCATION)/include -z
else
WSDL2HFLAGS=-c -e -y
endif
#	-c      generate C source code
#	-e      don't qualify enum names
#	-y      generate typedef synonyms for structs and enums

SWIG=$(SWIG_BIN_PATH)/swig -D_LARGEFILE64_SOURCE

#-------------------------------------------------------------------------------
# WDSLs, nsmap files
#-------------------------------------------------------------------------------

# edg-local-replica-catalog.wsdl
#-------------------------------------------------------------------------------
EDG_LOCAL_REPLICA_CATALOG_SOAP_FILES = lrcH.h lrcStub.h urcC.c lrcClient.c edg_local_replica_catalogSoapBinding.nsmap

$(EDG_LOCAL_REPLICA_CATALOG_SOAP_FILES): edg-local-replica-catalog.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p lrc edg-local-replica-catalog.h

edg-local-replica-catalog.h: edg-local-replica-catalog.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -w -t $(top_srcdir)/src/typemap-lrc.dat $< -o $@

# edg-replica-metadata-catalog.wsdl
#-------------------------------------------------------------------------------
EDG_REPLICA_METADATA_CATALOG_SOAP_FILES = rmcH.h rmcStub.h rmcC.c rmcClient.c edg_replica_metadata_catalogSoapBinding.nsmap

$(EDG_REPLICA_METADATA_CATALOG_SOAP_FILES): edg-replica-metadata-catalog.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p rmc edg-replica-metadata-catalog.h

edg-replica-metadata-catalog.h: edg-replica-metadata-catalog.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -w -t $(top_srcdir)/src/typemap-rmc.dat $< -o $@

# srm.v1.1.wsdl
#-------------------------------------------------------------------------------
SRM_V1_1_SOAP_FILES = srmH.h srmStub.h srmC.c srmClient.c ISRM.nsmap

$(SRM_V1_1_SOAP_FILES): srm.v1.1.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p srm srm.v1.1.h

srm.v1.1.h: srm.v1.1.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -w -t $(top_srcdir)/src/typemap-srmv1.dat $< -o $@

# srm.v2.2.wsdl
#-------------------------------------------------------------------------------
SRM_V2_2_SOAP_FILES = srmv2H.h srmv2Stub.h srmv2C.c srmv2Client.c srmSoapBinding.nsmap

$(SRM_V2_2_SOAP_FILES): srm.v2.2.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p srmv2 srm.v2.2.h

srm.v2.2.h: srm.v2.2.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -t $(top_srcdir)/src/typemap-srmv2.dat $< -o $@

# fixed nsmap files
#-------------------------------------------------------------------------------
FIXED_NSMAP_FILES = \
	edg_local_replica_catalogSoapBinding+.nsmap \
	edg_replica_metadata_catalogSoapBinding+.nsmap \
	srmSoapBinding+.nsmap

edg_local_replica_catalogSoapBinding+.nsmap: edg_local_replica_catalogSoapBinding.nsmap
	sed 's/struct Namespace namespaces/struct Namespace namespaces_lrc/' $? > $@

edg_replica_metadata_catalogSoapBinding+.nsmap: edg_replica_metadata_catalogSoapBinding.nsmap
	sed 's/struct Namespace namespaces/struct Namespace namespaces_rmc/' $? > $@

srmSoapBinding+.nsmap: srmSoapBinding.nsmap
	sed 's/struct Namespace namespaces/struct Namespace namespaces_srmv2/' $? > $@

if USE_GSOAP_2_7_9
STDSOAP2_C_FIX=patch -p0 -b stdsoap2.c $(top_srcdir)/src/c/stdsoap2.c.patch
else
STDSOAP2_C_FIX=@echo 'No patch needed for stdsoap2.c'
endif

# Copy gsoap file
stdsoap2.c: 
	cp -f $(GSOAP_LOCATION)/src/$@ $@
	$(STDSOAP2_C_FIX)
	
# Common Files
soapdefs.h:
	echo "//autogenerated file" > $@
	echo "#undef WITH_NOGLOBAL" >> $@
	echo "#undef SOAP_FMAC3" >> $@
	echo "#undef SOAP_FMAC4" >> $@

env.c:
	echo '#include "stdsoap2.h" // autogen' > $@
	echo 'struct Namespace namespaces[] ={{NULL, NULL}}; // autogen' >> $@

#-------------------------------------------------------------------------------
# _PROGRAMS, _LIBRARIES, BUILT_SOURCES...
#-------------------------------------------------------------------------------

# distributed header files
dist_include_HEADERS = 
	srm_ifce.h \
	srm_types.h

# executables
bin_PROGRAMS = \
	srm_unittest \ 
	srm_test

# libraries
lib_LIBRARIES = \
	libsrm.a

# shared libraries
lib_LTLIBRARIES = \
	libsrm.la 
#	libsrm_pthr.la 

# generated source files (to build before other programs and libraries)
BUILT_SOURCES = 
#	$(EDG_LOCAL_REPLICA_CATALOG_SOAP_FILES) \
#	$(EDG_REPLICA_METADATA_CATALOG_SOAP_FILES) \
#	$(SRM_V1_1_SOAP_FILES) \
#	$(SRM_V2_2_SOAP_FILES) \
#	$(FIXED_NSMAP_FILES) \
#	gfal_wrap.c \
#	gfalthr_wrap.c

# python
#pythondir = $(libdir)/python$(PYTHON_VERSION)/site-packages
#pkgpythondir = $(pythondir)
#pyexecdir = $(libdir)/python$(PYTHON_VERSION)/site-packages
#pkgpyexecdir = $(pyexecdir)
#pkgpython_PYTHON = gfal.py gfalthr.py
#pkgpyexec_LTLIBRARIES = _gfal.la _gfalthr.la

#_gfal_la_SOURCES = gfal.i lcg-typemaps.python.i gfal_wrap.c
#_gfal_la_LDFLAGS = -module
#_gfal_la_CFLAGS = $(PYTHON_CFLAGS)
#_gfal_la_LIBADD = libsrm.la

#gfal_wrap.c: gfal.i lcg-typemaps.python.i
#	SWIG_LIB=$(SWIG_LIB_PATH) $(SWIG) -python -o $@ $<

#_gfalthr_la_SOURCES = gfalthr.i gfal.i lcg-typemaps.python.i gfalthr_wrap.c
#_gfalthr_la_LDFLAGS = -module
#_gfalthr_la_CFLAGS = $(PYTHON_CFLAGS)
#_gfalthr_la_LIBADD = libsrm_pthr.la

#gfalthr_wrap.c: gfalthr.i lcg-typemaps.python.i
#	SWIG_LIB=$(SWIG_LIB_PATH) $(SWIG) -python -o $@ $<


SRM_SOURCE_FILES = \
    stdsoap2.c \
    srmv2C.c \
    srmv2Client.c \
    srmSoapBinding.c \
	srm_dependencies.c \
	srm_version_wrapper.c \
	srm_util.c \
	srmv2_directory_functions.c \
	srmv2_sync_wrapper.c \
	srmv2_async_wrapper.c \
	srmv2_space_management_functions.c \
	srmv2_discovery_functions.c \
	srmv2_permission_functions.c \
	srmv2_data_transfer_functions.c 

SRM_FLAGS = \
	-I$(LFC_LOCATION)/include/lfc \
	-DGFAL_ENABLE_RFIO -I/usr/include/shift -I/usr/local/include/shift -I$(DPM_LOCATION)/include/dpm \
	-DGFAL_ENABLE_DCAP -I$(DCAP_LOCATION)/include \
	-DGFAL_SECURE \
	-fPIC -D_LARGEFILE64_SOURCE \
	-DVERSION=\"$(VERSION)-$(RELEASE)\" \
	$(SOAPCPP2_FLAGS)
	


# libsrm.a
#-------------------------------------------------------------------------------
libsrm_a_SOURCES = $(SRM_SOURCE_FILES)

libsrm_a_CFLAGS = \
	$(GLOBUS_NOTHR_CFLAGS) \
	$(GLITE_CFLAGS) \
	$(SRM_FLAGS) \
	$(GSOAP_CFLAGS) \
	$(CGSI_GSOAP_CFLAGS) \
	$(VOMS_CFLAGS)

# libsrm.la
#-------------------------------------------------------------------------------
libsrm_la_SOURCES = $(SRM_SOURCE_FILES)

libsrm_la_LIBADD = \
	-luuid -lc -ldl \
	$(CGSI_GSOAP_LIBS) \
	$(GLOBUS_GSS_NOTHR_LIBS) \
	$(GLOBUS_FTP_CLIENT_NOTHR_LIBS) \
	$(VOMS_NOTHR_LIBS) \
	-lldap

libsrm_la_CFLAGS = \
	$(GLOBUS_NOTHR_CFLAGS) \
	$(GLITE_CFLAGS) \
	$(SRM_FLAGS) \
	$(GSOAP_CFLAGS) \
	$(CGSI_GSOAP_CFLAGS) \
	$(VOMS_CFLAGS)

libsrm_la_LDFLAGS = \
	$(SRM_FLAGS) \
	-version-info $(INTERFACE_LIBTOOL_CURRENT):$(INTERFACE_LIBTOOL_REVISION):$(INTERFACE_LIBTOOL_AGE)

# libsrm_pthr.la
#-------------------------------------------------------------------------------
#libsrm_pthr_la_SOURCES = $(SRM_SOURCE_FILES)

#libsrm_pthr_la_LIBADD = \
#	-luuid -lc -ldl \
#	$(CGSI_GSOAP_LIBS) \
#	$(GLOBUS_GSS_THR_LIBS) \
#	$(GLOBUS_FTP_CLIENT_THR_LIBS) \
#	$(VOMS_THR_LIBS) \
#	-lldap
#
#libsrm_pthr_la_CFLAGS = \
#	$(GLOBUS_THR_CFLAGS) \
#	$(GLITE_CFLAGS) \
#	$(SRM_FLAGS) \
#	$(GSOAP_CFLAGS) \
#	$(CGSI_GSOAP_CFLAGS) \
#	$(VOMS_CFLAGS)
#
#libsrm_pthr_la_LDFLAGS = \
#	$(SRM_FLAGS) \
#	-version-info $(INTERFACE_LIBTOOL_CURRENT):$(INTERFACE_LIBTOOL_REVISION):$(INTERFACE_LIBTOOL_AGE)


srm_unittest_SOURCES = srm_unittest.c
srm_unittest_LDADD = libsrm.la  
srm_unittest_CFLAGS = $(SRM_FLAGS) $(GSOAP_CFLAGS) $(CGSI_GSOAP_CFLAGS) -D_LARGEFILE64_SOURCE

srm_test_SOURCES = srm_test.c
srm_test_LDADD = libsrm.la  
srm_test_CFLAGS = $(SRM_FLAGS) $(GSOAP_CFLAGS) $(CGSI_GSOAP_CFLAGS) -D_LARGEFILE64_SOURCE

