# Copyright (c) Members of the EGEE Collaboration. 2004-2008.
# See http://www.eu-egee.crg/partners/ for details on the copyright
# holders.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.crg/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Version info: $Id: Makefile.am,v 1.23 2009/10/14 09:47:14 szamsu Exp $
# Release: $Name:  $

SOAPCPP2=$(GSOAP_LOCATION)/bin/soapcpp2
#SOAPCPP2FLAGS=-c -d/tmp 
SOAPCPP2FLAGS=-c  
#	-c = generate c code

#WSDL2H=$(GSOAP_LOCATION)/bin/wsdl2h
WSDL2H=$(GSOAP_WSDL2H_LOCATION)/bin/wsdl2h
if USE_GSOAP_2_7_10
WSDL2HFLAGS=-c -e -y -I$(GSOAP_LOCATION)/include -z
else
WSDL2HFLAGS=-c -e -y
endif
#	-c      generate C source code
#	-e      don't qualify enum names
#	-y      generate typedef synonyms for structs and enums

#-------------------------------------------------------------------------------
# WDSLs, nsmap files
#-------------------------------------------------------------------------------

# edg-local-replica-catalog.wsdl
#-------------------------------------------------------------------------------
EDG_LOCAL_REPLICA_CATALOG_SOAP_FILES = lrcH.h lrcStub.h urcC.c lrcClient.c edg_local_replica_catalogSoapBinding.nsmap

$(EDG_LOCAL_REPLICA_CATALOG_SOAP_FILES): edg-local-replica-catalog.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p lrc edg-local-replica-catalog.h

edg-local-replica-catalog.h: edg-local-replica-catalog.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -w -t $(top_srcdir)/src/typemap-lrc.dat $< -o $@

# edg-replica-metadata-catalog.wsdl
#-------------------------------------------------------------------------------
EDG_REPLICA_METADATA_CATALOG_SOAP_FILES = rmcH.h rmcStub.h rmcC.c rmcClient.c edg_replica_metadata_catalogSoapBinding.nsmap

$(EDG_REPLICA_METADATA_CATALOG_SOAP_FILES): edg-replica-metadata-catalog.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p rmc edg-replica-metadata-catalog.h

edg-replica-metadata-catalog.h: edg-replica-metadata-catalog.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -w -t $(top_srcdir)/src/typemap-rmc.dat $< -o $@

# srm.v1.1.wsdl
#-------------------------------------------------------------------------------
SRM_V1_1_SOAP_FILES = srmH.h srmStub.h srmC.c srmClient.c ISRM.nsmap

$(SRM_V1_1_SOAP_FILES): srm.v1.1.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p srm srm.v1.1.h

srm.v1.1.h: srm.v1.1.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -w -t $(top_srcdir)/src/typemap-srmv1.dat $< -o $@

# srm.v2.2.wsdl
#-------------------------------------------------------------------------------
SRM_V2_2_SOAP_FILES = srmv2H.h srmv2Stub.h srmv2C.c srmv2Client.c srmSoapBinding.nsmap

$(SRM_V2_2_SOAP_FILES): srm.v2.2.h
	$(SOAPCPP2) $(SOAPCPP2FLAGS) -p srmv2 srm.v2.2.h

srm.v2.2.h: srm.v2.2.wsdl
	$(WSDL2H) $(WSDL2HFLAGS) -t $(top_srcdir)/src/typemap-srmv2.dat $< -o $@

# fixed nsmap files
#-------------------------------------------------------------------------------
FIXED_NSMAP_FILES = \
	edg_local_replica_catalogSoapBinding+.nsmap \
	edg_replica_metadata_catalogSoapBinding+.nsmap \
	srmSoapBinding+.nsmap

edg_local_replica_catalogSoapBinding+.nsmap: edg_local_replica_catalogSoapBinding.nsmap
	sed 's/struct Namespace namespaces/struct Namespace namespaces_lrc/' $? > $@

edg_replica_metadata_catalogSoapBinding+.nsmap: edg_replica_metadata_catalogSoapBinding.nsmap
	sed 's/struct Namespace namespaces/struct Namespace namespaces_rmc/' $? > $@

srmSoapBinding+.nsmap: srmSoapBinding.nsmap
	sed 's/struct Namespace namespaces/struct Namespace namespaces_srmv2/' $? > $@

if USE_GSOAP_2_7_9
STDSOAP2_C_FIX=patch -p0 -b stdsoap2.c $(top_srcdir)/src/c/stdsoap2.c.patch
else
STDSOAP2_C_FIX=@echo 'No patch needed for stdsoap2.c'
endif

# Copy gsoap file
stdsoap2.c: 
	cp -f $(GSOAP_LOCATION)/src/$@ $@
	$(STDSOAP2_C_FIX)
	
# Common Files
soapdefs.h:
	echo "//autogenerated file" > $@
	echo "#undef WITH_NOGLOBAL" >> $@
	echo "#undef SOAP_FMAC3" >> $@
	echo "#undef SOAP_FMAC4" >> $@

#-------------------------------------------------------------------------------
# _PROGRAMS, _LIBRARIES, BUILT_SOURCES...
#-------------------------------------------------------------------------------

dist_include_HEADERS = \
    gfal_srm_ifce.h \
    gfal_srm_ifce_types.h

# executables
bin_PROGRAMS = \
    gfal_srm_ifce_unittest \
	gfal_srm_ifce_version

# libraries
lib_LIBRARIES = \
	libgfal_srm_ifce.a

# shared libraries
lib_LTLIBRARIES = \
	libgfal_srm_ifce.la

# generated source files (to build before other programs and libraries)
BUILT_SOURCES = \
	$(EDG_LOCAL_REPLICA_CATALOG_SOAP_FILES) \
	$(EDG_REPLICA_METADATA_CATALOG_SOAP_FILES) \
	$(SRM_V1_1_SOAP_FILES) \
	$(SRM_V2_2_SOAP_FILES) \
	$(FIXED_NSMAP_FILES) 

GFAL_SRM_IFCE_SOURCE_FILES = \
    srm_util.c \
	stdsoap2.c \
    srmv2C.c \
    srmSoapBinding.c \
    srmv2Client.c \
    srm_dependencies.c \
    srm_version_wrapper.c \
    srmv2_directory_functions.c \
    srmv2_sync_wrapper.c \
    srmv2_async_wrapper.c \
    srmv2_space_management_functions.c \
    srmv2_discovery_functions.c \
    srmv2_permission_functions.c \
    srmSoapBinding+.nsmap \
    srmv2_data_transfer_functions.c

GFAL_SRM_IFCE_CFLAGS = \
	-DGFAL_SECURE \
	-DVERSION=\"$(VERSION)-$(RELEASE)\" \
	-D_LARGEFILE64_SOURCE \
	$(SOAPCPP2_FLAGS)

# libgfal.a
#-------------------------------------------------------------------------------
libgfal_srm_ifce_a_SOURCES = $(GFAL_SRM_IFCE_SOURCE_FILES)

libgfal_srm_ifce_a_CFLAGS = \
	$(GLITE_CFLAGS) \
	$(GFAL_SRM_IFCE_CFLAGS) \
	$(GSOAP_CFLAGS) \
	$(CGSI_GSOAP_CFLAGS) 

# libgfal.la
#-------------------------------------------------------------------------------
libgfal_srm_ifce_la_SOURCES = $(GFAL_SRM_IFCE_SOURCE_FILES)

libgfal_srm_ifce_la_LIBADD = \
	$(CGSI_GSOAP_LIBS) 

libgfal_srm_ifce_la_CFLAGS = \
	$(GLITE_CFLAGS) \
	$(GFAL_SRM_IFCE_CFLAGS) \
	$(GSOAP_CFLAGS) \
	$(CGSI_GSOAP_CFLAGS) 

libgfal_srm_ifce_la_LDFLAGS = \
	$(GFAL_SRM_IFCE_CFLAGS) \
	-version-info $(INTERFACE_LIBTOOL_CURRENT):$(INTERFACE_LIBTOOL_REVISION):$(INTERFACE_LIBTOOL_AGE)

# gfal_version
#-------------------------------------------------------------------------------
gfal_srm_ifce_version_SOURCES = gfal_srm_ifce_version.c
gfal_srm_ifce_version_LDADD = libgfal_srm_ifce.la
gfal_srm_ifce_version_CFLAGS = $(GFAL_SRM_IFCE_CFLAGS)

# test programs
#-------------------------------------------------------------------------------
gfal_srm_ifce_unittest_SOURCES = gfal_srm_ifce_unittest.c
gfal_srm_ifce_unittest_LDADD = $(top_builddir)/src/libgfal_srm_ifce.la -lcheck
gfal_srm_ifce_unittest_CFLAGS = $(GFAL_SRM_IFCE_CFLAGS) $(GSOAP_CFLAGS) $(CGSI_GSOAP_CFLAGS) 

